--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jwt-decode": "^4.0.0",
     "vue": "^3.5.13",
+    "vue-cal": "^4.10.2",
     "vue-router": "^4.5.1",
     "vue3-google-login": "^2.0.33"
   },
