--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "estetica-front": "file:",
     "jwt-decode": "^4.0.0",
     "vue": "^3.5.13",
